asintatico.output
Grammar

    0 $accept: programa $end

    1 programa: lista_declaracao

    2 lista_declaracao: declaracao
    3                 | lista_declaracao declaracao

    4 declaracao: declaracao_var
    5           | declaracao_fun

    6 declaracao_var: TIPO lista_declaracao_var

    7 lista_declaracao_var: ID ';'
    8                     | ID ',' lista_declaracao_var

    9 $@1: %empty

   10 declaracao_fun: ID '(' ')' $@1 cmpst_statement

   11 cmpst_statement: DEL_BLOCO_ABRE lista_statement DEL_BLOCO_FECHA

   12 lista_statement: statement
   13                | statement lista_statement

   14 statement: exp_statement
   15          | sel_statement
   16          | rpt_statement
   17          | print_statement
   18          | read_statement
   19          | cmpst_statement

   20 print_statement: PRINT '(' exp ')' ';'

   21 read_statement: READ '(' ID ')' ';'

   22 sel_statement: IF '(' exp ')' statement
   23              | IF '(' exp ')' statement ELSE statement

   24 rpt_statement: RPT '(' exp ')' statement

   25 exp_statement: exp ';'

   26 $@2: %empty

   27 exp: ID $@2 ASSIGN exp
   28    | exp_simples

   29 exp_simples: exp_add REL exp_add
   30            | exp_add

   31 exp_add: exp_add OADD term
   32        | term

   33 term: term OMULT fator
   34     | fator

   35 fator: '(' exp ')'
   36      | call
   37      | ID
   38      | INTEIRO

   39 call: ID '(' ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 20 21 22 23 24 35 39
')' (41) 10 20 21 22 23 24 35 39
',' (44) 8
';' (59) 7 20 21 25
error (256)
ID (258) 7 8 10 21 27 37 39
INTEIRO (259) 38
PRINT (260) 20
READ (261) 21
ASSIGN (262) 27
OADD (263) 31
OMULT (264) 33
REL (265) 29
RPT (266) 24
IF (267) 22 23
IFX (268)
ELSE (269) 23
DEL_BLOCO_ABRE (270) 11
DEL_BLOCO_FECHA (271) 11
TIPO (272) 6


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
programa (23)
    on left: 1, on right: 0
lista_declaracao (24)
    on left: 2 3, on right: 1 3
declaracao (25)
    on left: 4 5, on right: 2 3
declaracao_var (26)
    on left: 6, on right: 4
lista_declaracao_var (27)
    on left: 7 8, on right: 6 8
declaracao_fun (28)
    on left: 10, on right: 5
$@1 (29)
    on left: 9, on right: 10
cmpst_statement (30)
    on left: 11, on right: 10 19
lista_statement (31)
    on left: 12 13, on right: 11 13
statement (32)
    on left: 14 15 16 17 18 19, on right: 12 13 22 23 24
print_statement (33)
    on left: 20, on right: 17
read_statement (34)
    on left: 21, on right: 18
sel_statement (35)
    on left: 22 23, on right: 15
rpt_statement (36)
    on left: 24, on right: 16
exp_statement (37)
    on left: 25, on right: 14
exp (38)
    on left: 27 28, on right: 20 22 23 24 25 27 35
$@2 (39)
    on left: 26, on right: 27
exp_simples (40)
    on left: 29 30, on right: 28
exp_add (41)
    on left: 31 32, on right: 29 30 31
term (42)
    on left: 33 34, on right: 31 32 33
fator (43)
    on left: 35 36 37 38, on right: 33 34
call (44)
    on left: 39, on right: 36


State 0

    0 $accept: . programa $end

    ID    shift, and go to state 1
    TIPO  shift, and go to state 2

    programa          go to state 3
    lista_declaracao  go to state 4
    declaracao        go to state 5
    declaracao_var    go to state 6
    declaracao_fun    go to state 7


State 1

   10 declaracao_fun: ID . '(' ')' $@1 cmpst_statement

    '('  shift, and go to state 8


State 2

    6 declaracao_var: TIPO . lista_declaracao_var

    ID  shift, and go to state 9

    lista_declaracao_var  go to state 10


State 3

    0 $accept: programa . $end

    $end  shift, and go to state 11


State 4

    1 programa: lista_declaracao .
    3 lista_declaracao: lista_declaracao . declaracao

    ID    shift, and go to state 1
    TIPO  shift, and go to state 2

    $default  reduce using rule 1 (programa)

    declaracao      go to state 12
    declaracao_var  go to state 6
    declaracao_fun  go to state 7


State 5

    2 lista_declaracao: declaracao .

    $default  reduce using rule 2 (lista_declaracao)


State 6

    4 declaracao: declaracao_var .

    $default  reduce using rule 4 (declaracao)


State 7

    5 declaracao: declaracao_fun .

    $default  reduce using rule 5 (declaracao)


State 8

   10 declaracao_fun: ID '(' . ')' $@1 cmpst_statement

    ')'  shift, and go to state 13


State 9

    7 lista_declaracao_var: ID . ';'
    8                     | ID . ',' lista_declaracao_var

    ';'  shift, and go to state 14
    ','  shift, and go to state 15


State 10

    6 declaracao_var: TIPO lista_declaracao_var .

    $default  reduce using rule 6 (declaracao_var)


State 11

    0 $accept: programa $end .

    $default  accept


State 12

    3 lista_declaracao: lista_declaracao declaracao .

    $default  reduce using rule 3 (lista_declaracao)


State 13

   10 declaracao_fun: ID '(' ')' . $@1 cmpst_statement

    $default  reduce using rule 9 ($@1)

    $@1  go to state 16


State 14

    7 lista_declaracao_var: ID ';' .

    $default  reduce using rule 7 (lista_declaracao_var)


State 15

    8 lista_declaracao_var: ID ',' . lista_declaracao_var

    ID  shift, and go to state 9

    lista_declaracao_var  go to state 17


State 16

   10 declaracao_fun: ID '(' ')' $@1 . cmpst_statement

    DEL_BLOCO_ABRE  shift, and go to state 18

    cmpst_statement  go to state 19


State 17

    8 lista_declaracao_var: ID ',' lista_declaracao_var .

    $default  reduce using rule 8 (lista_declaracao_var)


State 18

   11 cmpst_statement: DEL_BLOCO_ABRE . lista_statement DEL_BLOCO_FECHA

    ID              shift, and go to state 20
    INTEIRO         shift, and go to state 21
    PRINT           shift, and go to state 22
    READ            shift, and go to state 23
    RPT             shift, and go to state 24
    IF              shift, and go to state 25
    DEL_BLOCO_ABRE  shift, and go to state 18
    '('             shift, and go to state 26

    cmpst_statement  go to state 27
    lista_statement  go to state 28
    statement        go to state 29
    print_statement  go to state 30
    read_statement   go to state 31
    sel_statement    go to state 32
    rpt_statement    go to state 33
    exp_statement    go to state 34
    exp              go to state 35
    exp_simples      go to state 36
    exp_add          go to state 37
    term             go to state 38
    fator            go to state 39
    call             go to state 40


State 19

   10 declaracao_fun: ID '(' ')' $@1 cmpst_statement .

    $default  reduce using rule 10 (declaracao_fun)


State 20

   27 exp: ID . $@2 ASSIGN exp
   37 fator: ID .
   39 call: ID . '(' ')'

    '('  shift, and go to state 41

    ASSIGN    reduce using rule 26 ($@2)
    $default  reduce using rule 37 (fator)

    $@2  go to state 42


State 21

   38 fator: INTEIRO .

    $default  reduce using rule 38 (fator)


State 22

   20 print_statement: PRINT . '(' exp ')' ';'

    '('  shift, and go to state 43


State 23

   21 read_statement: READ . '(' ID ')' ';'

    '('  shift, and go to state 44


State 24

   24 rpt_statement: RPT . '(' exp ')' statement

    '('  shift, and go to state 45


State 25

   22 sel_statement: IF . '(' exp ')' statement
   23              | IF . '(' exp ')' statement ELSE statement

    '('  shift, and go to state 46


State 26

   35 fator: '(' . exp ')'

    ID       shift, and go to state 20
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    exp          go to state 47
    exp_simples  go to state 36
    exp_add      go to state 37
    term         go to state 38
    fator        go to state 39
    call         go to state 40


State 27

   19 statement: cmpst_statement .

    $default  reduce using rule 19 (statement)


State 28

   11 cmpst_statement: DEL_BLOCO_ABRE lista_statement . DEL_BLOCO_FECHA

    DEL_BLOCO_FECHA  shift, and go to state 48


State 29

   12 lista_statement: statement .
   13                | statement . lista_statement

    ID              shift, and go to state 20
    INTEIRO         shift, and go to state 21
    PRINT           shift, and go to state 22
    READ            shift, and go to state 23
    RPT             shift, and go to state 24
    IF              shift, and go to state 25
    DEL_BLOCO_ABRE  shift, and go to state 18
    '('             shift, and go to state 26

    $default  reduce using rule 12 (lista_statement)

    cmpst_statement  go to state 27
    lista_statement  go to state 49
    statement        go to state 29
    print_statement  go to state 30
    read_statement   go to state 31
    sel_statement    go to state 32
    rpt_statement    go to state 33
    exp_statement    go to state 34
    exp              go to state 35
    exp_simples      go to state 36
    exp_add          go to state 37
    term             go to state 38
    fator            go to state 39
    call             go to state 40


State 30

   17 statement: print_statement .

    $default  reduce using rule 17 (statement)


State 31

   18 statement: read_statement .

    $default  reduce using rule 18 (statement)


State 32

   15 statement: sel_statement .

    $default  reduce using rule 15 (statement)


State 33

   16 statement: rpt_statement .

    $default  reduce using rule 16 (statement)


State 34

   14 statement: exp_statement .

    $default  reduce using rule 14 (statement)


State 35

   25 exp_statement: exp . ';'

    ';'  shift, and go to state 50


State 36

   28 exp: exp_simples .

    $default  reduce using rule 28 (exp)


State 37

   29 exp_simples: exp_add . REL exp_add
   30            | exp_add .
   31 exp_add: exp_add . OADD term

    OADD  shift, and go to state 51
    REL   shift, and go to state 52

    $default  reduce using rule 30 (exp_simples)


State 38

   32 exp_add: term .
   33 term: term . OMULT fator

    OMULT  shift, and go to state 53

    $default  reduce using rule 32 (exp_add)


State 39

   34 term: fator .

    $default  reduce using rule 34 (term)


State 40

   36 fator: call .

    $default  reduce using rule 36 (fator)


State 41

   39 call: ID '(' . ')'

    ')'  shift, and go to state 54


State 42

   27 exp: ID $@2 . ASSIGN exp

    ASSIGN  shift, and go to state 55


State 43

   20 print_statement: PRINT '(' . exp ')' ';'

    ID       shift, and go to state 20
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    exp          go to state 56
    exp_simples  go to state 36
    exp_add      go to state 37
    term         go to state 38
    fator        go to state 39
    call         go to state 40


State 44

   21 read_statement: READ '(' . ID ')' ';'

    ID  shift, and go to state 57


State 45

   24 rpt_statement: RPT '(' . exp ')' statement

    ID       shift, and go to state 20
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    exp          go to state 58
    exp_simples  go to state 36
    exp_add      go to state 37
    term         go to state 38
    fator        go to state 39
    call         go to state 40


State 46

   22 sel_statement: IF '(' . exp ')' statement
   23              | IF '(' . exp ')' statement ELSE statement

    ID       shift, and go to state 20
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    exp          go to state 59
    exp_simples  go to state 36
    exp_add      go to state 37
    term         go to state 38
    fator        go to state 39
    call         go to state 40


State 47

   35 fator: '(' exp . ')'

    ')'  shift, and go to state 60


State 48

   11 cmpst_statement: DEL_BLOCO_ABRE lista_statement DEL_BLOCO_FECHA .

    $default  reduce using rule 11 (cmpst_statement)


State 49

   13 lista_statement: statement lista_statement .

    $default  reduce using rule 13 (lista_statement)


State 50

   25 exp_statement: exp ';' .

    $default  reduce using rule 25 (exp_statement)


State 51

   31 exp_add: exp_add OADD . term

    ID       shift, and go to state 61
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    term   go to state 62
    fator  go to state 39
    call   go to state 40


State 52

   29 exp_simples: exp_add REL . exp_add

    ID       shift, and go to state 61
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    exp_add  go to state 63
    term     go to state 38
    fator    go to state 39
    call     go to state 40


State 53

   33 term: term OMULT . fator

    ID       shift, and go to state 61
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    fator  go to state 64
    call   go to state 40


State 54

   39 call: ID '(' ')' .

    $default  reduce using rule 39 (call)


State 55

   27 exp: ID $@2 ASSIGN . exp

    ID       shift, and go to state 20
    INTEIRO  shift, and go to state 21
    '('      shift, and go to state 26

    exp          go to state 65
    exp_simples  go to state 36
    exp_add      go to state 37
    term         go to state 38
    fator        go to state 39
    call         go to state 40


State 56

   20 print_statement: PRINT '(' exp . ')' ';'

    ')'  shift, and go to state 66


State 57

   21 read_statement: READ '(' ID . ')' ';'

    ')'  shift, and go to state 67


State 58

   24 rpt_statement: RPT '(' exp . ')' statement

    ')'  shift, and go to state 68


State 59

   22 sel_statement: IF '(' exp . ')' statement
   23              | IF '(' exp . ')' statement ELSE statement

    ')'  shift, and go to state 69


State 60

   35 fator: '(' exp ')' .

    $default  reduce using rule 35 (fator)


State 61

   37 fator: ID .
   39 call: ID . '(' ')'

    '('  shift, and go to state 41

    $default  reduce using rule 37 (fator)


State 62

   31 exp_add: exp_add OADD term .
   33 term: term . OMULT fator

    OMULT  shift, and go to state 53

    $default  reduce using rule 31 (exp_add)


State 63

   29 exp_simples: exp_add REL exp_add .
   31 exp_add: exp_add . OADD term

    OADD  shift, and go to state 51

    $default  reduce using rule 29 (exp_simples)


State 64

   33 term: term OMULT fator .

    $default  reduce using rule 33 (term)


State 65

   27 exp: ID $@2 ASSIGN exp .

    $default  reduce using rule 27 (exp)


State 66

   20 print_statement: PRINT '(' exp ')' . ';'

    ';'  shift, and go to state 70


State 67

   21 read_statement: READ '(' ID ')' . ';'

    ';'  shift, and go to state 71


State 68

   24 rpt_statement: RPT '(' exp ')' . statement

    ID              shift, and go to state 20
    INTEIRO         shift, and go to state 21
    PRINT           shift, and go to state 22
    READ            shift, and go to state 23
    RPT             shift, and go to state 24
    IF              shift, and go to state 25
    DEL_BLOCO_ABRE  shift, and go to state 18
    '('             shift, and go to state 26

    cmpst_statement  go to state 27
    statement        go to state 72
    print_statement  go to state 30
    read_statement   go to state 31
    sel_statement    go to state 32
    rpt_statement    go to state 33
    exp_statement    go to state 34
    exp              go to state 35
    exp_simples      go to state 36
    exp_add          go to state 37
    term             go to state 38
    fator            go to state 39
    call             go to state 40


State 69

   22 sel_statement: IF '(' exp ')' . statement
   23              | IF '(' exp ')' . statement ELSE statement

    ID              shift, and go to state 20
    INTEIRO         shift, and go to state 21
    PRINT           shift, and go to state 22
    READ            shift, and go to state 23
    RPT             shift, and go to state 24
    IF              shift, and go to state 25
    DEL_BLOCO_ABRE  shift, and go to state 18
    '('             shift, and go to state 26

    cmpst_statement  go to state 27
    statement        go to state 73
    print_statement  go to state 30
    read_statement   go to state 31
    sel_statement    go to state 32
    rpt_statement    go to state 33
    exp_statement    go to state 34
    exp              go to state 35
    exp_simples      go to state 36
    exp_add          go to state 37
    term             go to state 38
    fator            go to state 39
    call             go to state 40


State 70

   20 print_statement: PRINT '(' exp ')' ';' .

    $default  reduce using rule 20 (print_statement)


State 71

   21 read_statement: READ '(' ID ')' ';' .

    $default  reduce using rule 21 (read_statement)


State 72

   24 rpt_statement: RPT '(' exp ')' statement .

    $default  reduce using rule 24 (rpt_statement)


State 73

   22 sel_statement: IF '(' exp ')' statement .
   23              | IF '(' exp ')' statement . ELSE statement

    ELSE  shift, and go to state 74

    $default  reduce using rule 22 (sel_statement)


State 74

   23 sel_statement: IF '(' exp ')' statement ELSE . statement

    ID              shift, and go to state 20
    INTEIRO         shift, and go to state 21
    PRINT           shift, and go to state 22
    READ            shift, and go to state 23
    RPT             shift, and go to state 24
    IF              shift, and go to state 25
    DEL_BLOCO_ABRE  shift, and go to state 18
    '('             shift, and go to state 26

    cmpst_statement  go to state 27
    statement        go to state 75
    print_statement  go to state 30
    read_statement   go to state 31
    sel_statement    go to state 32
    rpt_statement    go to state 33
    exp_statement    go to state 34
    exp              go to state 35
    exp_simples      go to state 36
    exp_add          go to state 37
    term             go to state 38
    fator            go to state 39
    call             go to state 40


State 75

   23 sel_statement: IF '(' exp ')' statement ELSE statement .

    $default  reduce using rule 23 (sel_statement)
